--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Sushilendra's Personal Site</title>
+  <title>Sushil's Personal Site</title>
 </head>
 
 <body>
@@ -13,7 +13,7 @@
     <tr>
       <td><img src="sushil.png" alt="Sushilendra" width="200" height="200"></td>
       <td>
-        <h1>Sushilendra G P</h1>
+        <h1>Sushil</h1>
         <p><em>Founder and CTO of <strong> <a href="https://www.appbrewery.co/">The App Brewery</a></strong></em></p>
         <P>Hi This a joke, welcome to my website. it's a quiet long since i was busy with something <em>important </em></P>
       </td>
