--- a/contact.html
+++ b/contact.html
@@ -10,11 +10,11 @@
 
 <body>
   <h1>My Contact Details</h1>
-  <p>Name    : Sushilendra G P </p>
-  <p>Address : NSRS MUTT BELLARI </p>
-  <P>Email Id : <a href="GPSUSHIL64@GMAIL.COM">GPSUSHIL64@GMAIL.COM</a> </P>
+  <p>Name    : Sushil </p>
+  <p>Address : NSRS MUTT, NEW YORK CITY</p>
+  <P>Email Id : <a href="abc@123gmail.com">abc@123gmail.com</a> </P>
 
-<form  action="mailto:gpsushil64@gmail.com" method="post" enctype="text/plain">
+<form  action="mailto:abc@123gmail.com" method="post" enctype="text/plain">
 <label for="">Your Name:</label>
 <input type="text" name="Your Name" value=""><br>
 <label for="">Your Email:</label>
