--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="sushil.png" alt="Sushilendra" width="200" height="200"></td>
+      <td><img src="sushil.png" alt="Sushil" width="200" height="200"></td>
       <td>
         <h1>Sushil</h1>
         <p><em>Founder and CTO of <strong> <a href="https://www.appbrewery.co/">The App Brewery</a></strong></em></p>
